--- a/output/categories.html
+++ b/output/categories.html
@@ -42,8 +42,7 @@
 
         <section id="content">
 <ul>
-    <li><a href="./category/machine-learning.html">machine learning,</a></li>
-    <li><a href="./category/programming.html">programming</a></li>
+    <li><a href="./category/blog.html">blog,</a></li>
 </ul>
         </section>
     </div>
