--- a/output/index.html
+++ b/output/index.html
@@ -46,8 +46,8 @@
             <div class="date">June 29, 2014</div>
             <div class="detail">
                 <header><h2>
-                    <a href="./2014/6/29/move-blog-from-blogger/" rel="bookmark">
-                        Move blog from blogger
+                    <a href="./2014/6/29/moved-blog-from-blogger/" rel="bookmark">
+                        Moved blog from blogger
                     </a>
                 </h2></header>
                 <div class="summary">I moved my blog from blogger (http://carpedm20.blogspot.kr) to here.</div>
