neural-network-translation update

--- a/output/categories.html
+++ b/output/categories.html
@@ -43,6 +43,7 @@
         <section id="content">
 <ul>
     <li><a href="./category/blog.html">blog,</a></li>
+    <li><a href="./category/machine-learning.html">Machine Learning,</a></li>
 </ul>
         </section>
     </div>
@@ -60,6 +61,14 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
+    </script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {inlineMath: [['$','$']]},
+        "HTML-CSS": 
+          {scale: 92},
+        TeX: { equationNumbers: { autoNumber: "AMS" }}});
     </script>
 
 
