--- a/output/index.html
+++ b/output/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="./theme/css/main.css" type="text/css">
     <link rel="stylesheet" href="./theme/css/pygments.css" type="text/css">
 
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
 </head>
 
 <body>
@@ -50,7 +52,7 @@
                         [번역] Neural Network를 이용한 손글씨 인지
                     </a>
                 </h2></header>
-                <div class="summary">http://neuralnetworksanddeeplearning.com/ 에 올라온 챕터을 이해하고 기록하고자 번역 작업을 ...</div>
+                <div class="summary">http://neuralnetworksanddeeplearning.com/ 에 올라온 챕터을 이해하고 기록하고자 번역을 시작한다 ...</div>
                 <div class="indextags">
                         <a href="./tags/machine-learning/">#machine_learning</a>
                         <a href="./tags/neural-network/">#neural_network</a>
