--- a/output/about/index.html
+++ b/output/about/index.html
@@ -76,13 +76,19 @@
 </tbody>
 </table>
 </div>
-<div class="section" id="interests">
-<h2>Interests</h2>
+<div class="section" id="current-interests">
+<h2>Current Interests</h2>
 <ul class="simple">
 <li>Machine Learning</li>
-<li>Reverse Engineering</li>
-<li>Web Service</li>
+<li>Data Visualization</li>
+</ul>
+</div>
+<div class="section" id="old-interests">
+<h2>Old Interests</h2>
+<ul class="simple">
+<li>Hacking</li>
 <li>Supercomputing</li>
+<li>Web Service</li>
 </ul>
 </div>
 <div class="section" id="awards">
