--- a/output/about/index.html
+++ b/output/about/index.html
@@ -24,6 +24,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../theme/css/main.css" type="text/css">
+    <link rel="stylesheet" href="../theme/css/carpedm20.css" type="text/css">
     <link rel="stylesheet" href="../theme/css/pygments.css" type="text/css">
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -46,7 +47,7 @@
     <h1></h1>
     
 
-    <img alt="Portrait picture of me" class="align-right" src="/images/carpedm20.png" style="width: 250px; height: 250px;" />
+    <img alt="carpedm20" class="align-right" src="/images/carpedm20.png" style="width: 250px; height: 250px;" />
 <div class="section" id="profile">
 <h2>Profile</h2>
 <ul class="simple">
