--- a/output/about/index.html
+++ b/output/about/index.html
@@ -58,7 +58,7 @@
 <div class="section" id="about-me">
 <h2>About me</h2>
 <ul class="simple">
-<li><em>드라마 '유령'을 보고 해킹에 빠진 컴덕. 단순히 해커의 언어라는 이유로 시작했던 파이썬. 그렇게 파이썬이라는 나라가 허락한 유일한 마약에 빠져 파이뽕에 취해있다. 취미는 역시 해킹. 가끔 파이썬 라이브러리를 만들거나 영화를 감상한다.</em></li>
+<li><em>드라마 '유령'을 보고 해킹에 빠진 컴덕. 단순히 해커의 언어라는 이유로 파이썬을 시작했고, 그렇게 파이썬이라는 나라가 허락한 유일한 마약에 빠져 파이뽕에 취해있다. 취미는 역시 해킹. 가끔 파이썬 라이브러리를 만들거나 영화를 감상한다.</em></li>
 </ul>
 </div>
 <div class="section" id="links">
