--- a/output/about/index.html
+++ b/output/about/index.html
@@ -188,7 +188,8 @@
 <div class="section" id="etc">
 <h3>ETC</h3>
 <ul class="simple">
-<li>2014 Lifetime Achievement Award (공로상) from the President of UNIST</li>
+<li><strong>2014 Lifetime Achievement Award</strong> (공로상) from the President of UNIST</li>
+<li><strong>2013 Lifetime Achievement Award</strong> (공로상) from the President of UNIST</li>
 </ul>
 </div>
 </div>
