--- a/output/about/index.html
+++ b/output/about/index.html
@@ -216,7 +216,7 @@
 <div class="section" id="research-experience">
 <h2>Research Experience</h2>
 <div class="section" id="research-lab-california-usa-2015-06-2015-09-expected">
-<h3>Research Lab, California, USA (2015.06 ~ 2015.09 expected)</h3>
+<h3>Research Lab, California, USA (2015.06 ~ 2015.09, expected)</h3>
 <ul class="simple">
 <li>in progress</li>
 </ul>
