--- a/output/about/index.html
+++ b/output/about/index.html
@@ -303,12 +303,12 @@
 <div class="section" id="facebook-bot">
 <h3>Facebook bot</h3>
 <div style="width:100%">
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/comgong.job"><img alt="Comgong-Job" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/comgong.png"></a>
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/comgong.abroad"><img alt="Comgong-Abroad" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/abroad.png"></a>
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistbap"><img alt="UNIST-bap" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/bap.png"></a>
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/hexa.portal"><img alt="UNIST-Portal-bot" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/portalbot.jpg"></a>
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistfedex"><img alt="UNIST-Fedex" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/fedex.png"></a>
-   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistbus"><img alt="UNIST-Bus" class="align-right" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/unist-bus.png"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/comgong.job"><img alt="Comgong-Job" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/comgong.png"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/comgong.abroad"><img alt="Comgong-Abroad" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/abroad.png"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistbap"><img alt="UNIST-bap" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/bap.png"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/hexa.portal"><img alt="UNIST-Portal-bot" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/portalbot.jpg"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistfedex"><img alt="UNIST-Fedex" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/fedex.png"></a>
+   <a class="reference external image-reference" target="_blank" href="https://www.facebook.com/unistbus"><img alt="UNIST-Bus" class="fb-bot" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/unist-bus.png"></a>
 </div>
 <br/></div>
 </div>
