--- a/output/about/index.html
+++ b/output/about/index.html
@@ -252,7 +252,7 @@
 </div>
 <div class="section" id="development-experience">
 <h2>Development Experience</h2>
-<p><strong>All demo links are dead because the virtual machine are corrupted</strong></p>
+<p><strong>All demo links are dead because the virtual machine are corrupted (2015-05-11)</strong></p>
 <div class="section" id="machine-learning">
 <h3>Machine Learning</h3>
 <a class="reference external image-reference" target="_blank" href="http://pail.unist.ac.kr:8080/"><img alt="ReviewDuk" class="align-center" src="https://raw.githubusercontent.com/carpedm20/blog/master/content/images/reviewduk.png" style="width: 90%;"></a><ul class="simple">
