--- a/output/about/index.html
+++ b/output/about/index.html
@@ -185,6 +185,14 @@
 </li>
 </ul>
 </div>
+<div class="section" id="scholarships">
+<h3>Scholarships</h3>
+<ul class="simple">
+<li><strong>Global Scholarship</strong> for Undergraduate Research Opportunities Program, UNIST :: 2015</li>
+<li><strong>Academic Performance Scholarship</strong>, UNIST :: 2011-2015</li>
+<li><strong>National Science and Engineering Scholarship</strong>, Korean Student Aid Foundation :: 2013</li>
+</ul>
+</div>
 <div class="section" id="etc">
 <h3>ETC</h3>
 <ul class="simple">
