--- a/output/about/index.html
+++ b/output/about/index.html
@@ -396,7 +396,7 @@
 <div class="section" id="skills">
 <h2>Skills</h2>
 <ul class="simple">
-<li>Programming: Python(&amp; Django, Flask), Go, Javascript(&amp; Angular.js), node.js, Ruby(&amp; Rails), HTML/CSS, Java, C++, C#</li>
+<li>Programming: Python(&amp; Django, Flask), Go, Javascript(&amp; React.js, Angular.js), node.js, Ruby(&amp; Rails), HTML/CSS, Java, C++, C#</li>
 <li>Human Languages: English - TOEIC 880 (2012), Korean - Native</li>
 </ul>
 </div>
