--- a/output/about/index.html
+++ b/output/about/index.html
@@ -148,6 +148,7 @@
 <dd><ul class="first last simple">
 <li>Held by Catholic University of Korea</li>
 <li>Awarded by the President of Catholic University of Korea (가톨릭대학교 총장상)</li>
+<li>Received an award of $1,000</li>
 </ul>
 </dd>
 </dl>
