--- a/output/categories.html
+++ b/output/categories.html
@@ -24,8 +24,8 @@
         <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
-    <link href="http://nobitagit.github.io/material-floating-button/mfb.css" rel="stylesheet" type="text/css">
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+    <link href="./theme/css/mfb.css" rel="stylesheet" type="text/css">
+    <link href="./theme/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./theme/css/main.css" type="text/css">
     <link rel="stylesheet" href="./theme/css/pure.css" type="text/css">
     <link rel="stylesheet" href="./theme/css/carpedm20.css" type="text/css">
@@ -68,9 +68,9 @@
       ga('send', 'pageview');
 
     </script>
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://nobitagit.github.io/material-floating-button/mfb.js"></script>
-    <script src="http://nobitagit.github.io/material-floating-button/lib/modernizr.touch.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="../theme/js/mfb.js"></script>
+    <script src="../theme/js/modernizr.touch.js"></script>
     <script src="../theme/js/script.js"></script>
 
 
