--- a/output/index.html
+++ b/output/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link href="./theme/css/mfb.css" rel="stylesheet" type="text/css">
-    <link href="./theme/css/ionicons.min.css" rel="stylesheet" type="text/css">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./theme/css/main.css" type="text/css">
     <link rel="stylesheet" href="./theme/css/pure.css" type="text/css">
     <link rel="stylesheet" href="./theme/css/carpedm20.css" type="text/css">
