--- a/output/about/index.html
+++ b/output/about/index.html
@@ -409,7 +409,7 @@
 <div class="section" id="skills">
 <h2>Skills</h2>
 <ul class="simple">
-<li>Programming: Python, Go, node.js, Ruby, Java, C++, C#</li>
+<li>Programming: Python, Lua, Go, node.js, Ruby, Java, C++, C#</li>
 <li>Human Languages: English - Professional working proficiency, Korean - Native</li>
 </ul>
 </div>
