--- a/output/about/index.html
+++ b/output/about/index.html
@@ -223,7 +223,7 @@
 <h3>ETC</h3>
 <ul>
 <li><dl class="first docutils">
-<dt><strong>Outstanding Graduate Award</strong></dt>
+<dt><strong>2016 Outstanding Graduate Award</strong></dt>
 <dd><ul class="first last simple">
 <li>Only one selected graduate, awarded by <strong>the Minister of Science, ICT and Future Planning</strong> (<strong>미래창조과학부장관상</strong>)</li>
 </ul>
