--- a/output/about/index.html
+++ b/output/about/index.html
@@ -225,7 +225,7 @@
 <li><dl class="first docutils">
 <dt><strong>2016 Outstanding Graduate Award</strong></dt>
 <dd><ul class="first last simple">
-<li>Only one selected graduate, awarded by <strong>the Minister of Science, ICT and Future Planning</strong> (<strong>미래창조과학부장관상</strong>)</li>
+<li>One selected graduate, awarded by <strong>the Minister of Science, ICT and Future Planning</strong> (<strong>미래창조과학부장관상</strong>)</li>
 </ul>
 </dd>
 </dl>
