--- a/output/about/index.html
+++ b/output/about/index.html
@@ -190,9 +190,9 @@
 </dd>
 </dl>
 </li>
-<li><p class="first"><strong>Academic Performance Scholarship</strong>, UNIST :: 2011-2015</p>
+<li><p class="first">Academic Performance ScholarshipUNIST :: 2011-2015</p>
 </li>
-<li><p class="first"><strong>National Science and Engineering Scholarship</strong>, Korean Student Aid Foundation :: 2013</p>
+<li><p class="first">National Science and Engineering Scholarship, Korean Student Aid Foundation :: 2013</p>
 </li>
 </ul>
 </div>
