--- a/output/index.html
+++ b/output/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 
 <head>
 
@@ -7,9 +7,9 @@
 
     <!-- meta -->
     <meta charset="utf-8" />
-    <meta name="author" content="carpedm20" />
-    <meta content="Machine Learning/Data Visualization/Computer Security" name="description">
-    <meta name="dc.language" content="ko" />
+    <meta name="author" content="Taehoon Kim" />
+    <meta content="Machine Learning, Natural Language Processing, Computer Vision" name="description">
+    <meta name="dc.language" content="en" />
     <meta name="dc.license" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,7 @@
     <link rel="icon" href="/theme/favicon.ico" type="image/x-icon">
 
     <!-- newsfeeds -->
-        <link href="/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="carpedm20 RSS Feed" />
+        <link href="/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="Taehoon Kim | carpedm20 RSS Feed" />
 
     <!-- assets -->
     <!--[if lt IE 9]>
@@ -36,7 +36,7 @@
 
 <body>
     <div id="wrapper">
-        <div id="blogtitle"><a href=".">carpedm20</a></div>
+        <div id="blogtitle"><a href=".">Taehoon Kim | carpedm20</a></div>
         <ul id="mainnav">
             <li class="first"><a href="/">home</a></li>
             <li><a href="/archive/">archive</a></li>
