--- a/output/about/index.html
+++ b/output/about/index.html
@@ -291,8 +291,8 @@
 <br>
 <hr></div>
 </div>
-<div class="section" id="development-experience">
-<h2>Development Experience</h2>
+<div class="section" id="projects">
+<h2>Projects</h2>
 <!--<p style="color: red; text-align: center;"><strong>All demo links are dead because the virtual machine are corrupted (2015-06-11)</strong></p>--><div class="section" id="machine-learning">
 <h3>Machine Learning</h3>
 <ul class="simple">
