--- a/output/about/index.html
+++ b/output/about/index.html
@@ -8,7 +8,7 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="Taehoon Kim" />
-    <meta content="Machine Learning, Natural Language Processing, Computer Vision" name="description">
+    <meta content="Reinforcement Learning, Natural Language Processing, Computer Vision" name="description">
     <meta name="dc.language" content="en" />
     <meta name="dc.license" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -92,7 +92,7 @@
 <div class="section" id="current">
 <h3>Current</h3>
 <ul class="simple">
-<li>Natural Language Processing, Reinforcement Learning, Computer Vision</li>
+<li>Reinforcement Learning, Natural Language Processing, Computer Vision</li>
 </ul>
 </div>
 <div class="section" id="old">
