--- a/output/about/index.html
+++ b/output/about/index.html
@@ -8,7 +8,7 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="Taehoon Kim" />
-    <meta content="Reinforcement Learning, Natural Language Processing, Computer Vision" name="description">
+    <meta content="Reinforcement Learning, Computer Vision, Machine Learning" name="description">
     <meta name="dc.language" content="en" />
     <meta name="dc.license" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,7 +95,7 @@
 <div class="section" id="current">
 <h3>Current</h3>
 <ul class="simple">
-<li>Reinforcement Learning, Generative Model, Algorithm Learning</li>
+<li>Reinforcement Learning, Computer vision, Machine learning</li>
 </ul>
 </div>
 <div class="section" id="old">
