--- a/output/index.html
+++ b/output/index.html
@@ -58,7 +58,7 @@
                         딥러닝 논문 구현에 대한 생각
                     </a>
                 </h2></header>
-                <div class="summary">발표 자료: link 저는 TensorFlow가 공개된 2015년 11월부터 지금까지 여러 편의 논문을 구현하고 오픈 소스들을 ...</div>
+                <div class="summary">발표 자료: link 저는 TensorFlow가 공개된 2015년 11월부터 지금까지 여러 편의 논문을 구현하고 오픈 소스들을 …</div>
                 <div class="indextags">
                         <a href="./tags/deep_learning/">#deep_learning</a>
                 </div>
