--- a/output/index.html
+++ b/output/index.html
@@ -57,7 +57,7 @@
             <div class="detail">
                 <header><h2>
                     <a href="https://carpedm20.github.io/2019/ai-superpower/" rel="bookmark">
-                        AI Superpower
+                        AI Superpower 요약 및 생각
                     </a>
                 </h2></header>
                 <div class="summary">중국과 일본의 인공지능 (AI) 스타트업에 관심이 있을 때, 중국어와 일본어로 쓰인 기사들을 구글 번역기를 돌려가며 ...</div>
