--- a/output/index.html
+++ b/output/index.html
@@ -60,7 +60,7 @@
                         import tensorflow에서 벗어나기
                     </a>
                 </h2></header>
-                <div class="summary">Sutton 교수님께서 70년간 AI 연구자들이 반복한 실수와 그로부터 우리가 배워야 하는 것에 대한 글 <The …</div>
+                <div class="summary">Sutton 교수님께서 70년간 AI 연구자들이 반복한 실수와 그로부터 우리가 배워야 하는 것에 대한 글 <The ...</div>
                 <div class="indextags">
                         <a href="https://carpedm20.github.io/tags/ai/">#ai</a>
                 </div>
@@ -74,7 +74,7 @@
                         AI Superpower 요약 및 생각
                     </a>
                 </h2></header>
-                <div class="summary">중국과 일본의 인공지능 (AI) 스타트업에 관심이 있을 때, 중국어와 일본어로 쓰인 기사들을 구글 번역기를 돌려가며 …</div>
+                <div class="summary">중국과 일본의 인공지능 (AI) 스타트업에 관심이 있을 때, 중국어와 일본어로 쓰인 기사들을 구글 번역기를 돌려가며 ...</div>
                 <div class="indextags">
                         <a href="https://carpedm20.github.io/tags/ai/">#ai</a>
                 </div>
@@ -88,7 +88,7 @@
                         샌프란에 있으면서 느낀 점
                     </a>
                 </h2></header>
-                <div class="summary">4개월이 지났다. 샌프란에 있으면서 느낀 점을 정리하면 기술은 인터넷에 선택적으로 공유되는 것보다 훨씬 빠르게 발전하고 …</div>
+                <div class="summary">4개월이 지났다. 샌프란에 있으면서 느낀 점을 정리하면 기술은 인터넷에 선택적으로 공유되는 것보다 훨씬 빠르게 발전하고 ...</div>
                 <div class="indextags">
                         <a href="https://carpedm20.github.io/tags/life/">#life</a>
                 </div>
@@ -102,7 +102,7 @@
                         딥러닝 논문 구현에 대한 생각
                     </a>
                 </h2></header>
-                <div class="summary">저는 TensorFlow가 공개된 2015년 11월부터 지금까지 여러 편의 논문을 구현하고 오픈 소스들을 읽으면서 많은 것을 …</div>
+                <div class="summary">저는 TensorFlow가 공개된 2015년 11월부터 지금까지 여러 편의 논문을 구현하고 오픈 소스들을 읽으면서 많은 것을 ...</div>
                 <div class="indextags">
                         <a href="https://carpedm20.github.io/tags/ai/">#ai</a>
                 </div>
@@ -116,7 +116,7 @@
                         carpedm20
                     </a>
                 </h2></header>
-                <div class="summary">틀에 박힌 고교생활에서 벗어나 대학의 자유로움을 느끼기 시작했을 때부터 사용하게 된 아이디다. <죽은 시인의 사회 …</div>
+                <div class="summary">틀에 박힌 고교생활에서 벗어나 대학의 자유로움을 느끼기 시작했을 때부터 사용하게 된 아이디다. <죽은 시인의 사회 ...</div>
                 <div class="indextags">
                 </div>
             </div>
